# -Manufacturing-AI-Parts-Verification-System

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
csharp-client/PartMatchingClient/: ApiClient.cs  Models.cs  PartMatchingClient.csproj  Program.cs
database/migrations/: 001_init.sql
docs/: 01_requirements.md  02_system_architecture.md  03_camera_lighting_design.md  04_api_spec.md  05_operation_manual.md  06_development_plan.md  07_model_and_metrics.md  08_deployment.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  assets.ts  styles.css  types.ts
frontend/src/components/: Calibration.tsx  CameraCapture.tsx  Dashboard.tsx  History.tsx  Inspect.tsx  Nav.tsx  PartGallery.tsx  Parts.tsx  Report.tsx  Settings.tsx  Topbar.tsx
scripts/: 10_generate_dataset.py  20_build_index.py  30_benchmark.py  40_calibrate_quality.py  _bootstrap.py  gen_cert.sh  run_api.sh  run_api_https.sh
src/partmatch/: __init__.py  benchmark.py  config.py  embedder.py  pipeline.py  preprocess.py
src/partmatch/backbones/: __init__.py  base.py  classic.py  dinov2.py  torchvision_backbone.py
src/partmatch/data/: __init__.py  synth.py
src/partmatch/db/: __init__.py  repository.py  schema_sqlite.sql
src/partmatch/index/: __init__.py  store.py
src/partmatch/matching/: __init__.py  engine.py
tests/: conftest.py  test_api.py  test_backbones.py  test_matching.py  test_quality.py  test_vector_store.py
web/: app.js  index.html  styles.css
(+17 files in other folders)
